--- a/a2/doc/report.tex
+++ b/a2/doc/report.tex
@@ -116,7 +116,7 @@ The summing-out of a variable eliminates a variable $x$ from the scope of a func
 \begin{align*}
   &y \in \mathbf{x} \implies \sum_y f(\mathbf{x}) = f(\mathbf{x})\nu + \sum_{\nu':\nu(A)\neq
   \nu'(A)} f(\mathbf{x})\nu'\\
-  &y \neg\in \mathbf{x} \implies \sum_y f(\mathbf{x}) = f(\mathbf{x})
+  &y \notin \mathbf{x} \implies \sum_y f(\mathbf{x}) = f(\mathbf{x})
 \end{align*}
 
 If we assume that the product and variable elimination operations obey the associativity law (i.e.
